# Meta-guided-document-extraction

./: .env.example  .gitignore  AGENTS.md  README.md  prd.md  pyproject.toml
configs/: model_config.json  process_config.json
configs/categories/: service_agreements.json
docs/: architecture.md  data_flow.mermaid  prd.md  session_progress.md  technical_documentation.md  workflow.md
docs/research/: package_research.md  requirements.txt
examples/service_agreements/: DATA_GUIDE.md
scripts/: batch_evaluate.py  bootstrap_category.py  export_traces.py  review_server.py  run_extraction.py  run_optimization.py  run_scout.py  test_retrieval.py
src/agents/: __init__.py
src/config/: __init__.py  lm.py  loader.py  settings.py
src/optimization/: __init__.py  gepa.py  population.py  reflector.py  validator.py
src/orchestration/: __init__.py  graph.py  hitl.py  nodes.py  state.py
src/retrieval/: __init__.py  colbert_compat.py  router.py
src/schemas/: __init__.py  category.py  document.py  evaluation.py  extraction.py  gold_standard.py  trace.py
src/storage/: __init__.py  file_lock.py  fs_store.py  paths.py  trace_logger.py
src/utils/: __init__.py  logging.py  pdf.py  text.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_colbert_retriever.py  test_colpali_retriever.py  test_extractor.py  test_fs_store.py  test_gepa.py  test_graph.py  test_hitl.py  test_index_rebuild.py  test_judge.py  test_judge_agent.py  test_lm_config.py  test_orchestration_nodes.py  test_population.py  test_reflector.py  test_router.py  test_schemas.py  (+4 more)
(+35 files in other folders)
