[project]
name = "meta-learning-document-extraction"
version = "0.1.0"
description = "Autonomous, self-optimizing document extraction system"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "llama-index",
    "dspy>=2.5",
    "pydantic>=2.0",
    "colpali-engine",
    "ragatouille",
    "python-dotenv>=1.0",
    "pdf2image>=1.16",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "odfpy>=1.4",
    "striprtf>=0.0.26",
    "filelock>=3.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
